Bug 133768 - Export to EPUB is slow on Windows and causes massive disk activity
Summary: Export to EPUB is slow on Windows and causes massive disk activity
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha1+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords: perf
Depends on:
Blocks: EPUB-Export
  Show dependency treegraph
 
Reported: 2020-06-07 18:08 UTC by Telesto
Modified: 2022-10-30 20:01 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-06-07 18:08:00 UTC
Description:
Export to EPUB is slow on Windows and causes massive disk activity

Steps to Reproduce:
1. Open attachment 160498 [details]
2. File -> Export as -> Export as epub

Actual Results:
2 minutes.. 1 minute reading at 72 MB per second and saving at 35 MB

Expected Results:
30 seconds like Linux


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 191288d6a7fb52b31038a21c4e71ee57ffa3bacd
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-06-07 20:28:39 UTC
Fine with 6.2
Comment 2 Telesto 2020-06-12 11:24:56 UTC
Bibisect warning: bug 133767
Comment 3 Buovjaga 2020-10-17 13:00:05 UTC
Repro

Version: 7.1.0.0.alpha0+ (x64)
Build ID: df74aef7159d7155addf78cfc4d139485945d794
CPU threads: 4; OS: Windows 10.0 Build 19041; UI render: default; VCL: win
Locale: fi-FI (fi_FI); UI: en-US
Calc: threaded
Comment 4 Telesto 2020-10-17 13:29:24 UTC
Not sure if this can be bibisected and my good comment being of any value here -> see bug 133767

This is *not* a regression.

In the range between 3b03604d1bb48fc1c1337307d0ba259dca9fbf1e and its correct revert in 02a5cbb9814dc224114dfbf3bc0b6c53658450c9, trying to export to EPUB actually saved an ODT. That code made incorrect selection to be returned to the calling code. So the fast operation and progress bar were artifacts of using another export filter, which both operates faster and shows the bar.
Comment 5 Telesto 2020-10-17 13:33:38 UTC
@Noel,
Adding you're the perf magician. Note: a major downside: Windows only. So not sure if you the tooling present for that..
Comment 6 QA Administrators 2022-10-18 03:34:14 UTC Comment hidden (obsolete)
Comment 7 Commit Notification 2022-10-24 08:11:22 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1ea0ea19f1dc13c4191ab9d4222adfd2579b802c

tdf#133768 speed up temp file creation

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Telesto 2022-10-30 20:01:07 UTC
25 seconds or so.. Nice.
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9cd0f4c2d25462feba0ffcbd906c199273821243
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded