include/tools/stream.hxx
@@ -50,8 +50,9 @@ enum class StreamMode {
 // file i/o
     NOCREATE                 = 0x0004,  ///< 1 == Don't create file
     TRUNC                    = 0x0008,  ///< Truncate _existing_ file to zero length
-    COPY_ON_SYMLINK          = 0x0010,  ///< copy-on-write for symlinks (Unix)
+    COPY_ON_SYMLINK          = 0x0010,  ///< copy-on-write for symlinks (Unix-only)
     TEMPORARY                = 0x0020,  ///< temporary file attribute (Windows-only)
+    DELETE_ON_CLOSE          = 0x0040,  ///< only for temporary files (Windows-only)
 // sharing options
     SHARE_DENYNONE           = 0x0100,
     SHARE_DENYREAD           = 0x0200,  // overrides denynone
@@ -65,7 +66,7 @@ enum class StreamMode {
 };
 namespace o3tl
 {
-    template<> struct typed_flags<StreamMode> : is_typed_flags<StreamMode, 0x0f3f> {};
+    template<> struct typed_flags<StreamMode> : is_typed_flags<StreamMode, 0x0f7f> {};
 }
 
 #define STREAM_SEEK_TO_BEGIN            0L
